Fixed mobile menu z-index

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -40,6 +40,7 @@ header {
       margin-left: auto;
     }
     @include media('<=md') {
+      z-index: 3;
       width: 50vw;
       height: 100vh;
       position: fixed;
